[package]
name = "sample_rcgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.rcgen]
version = "0.8.14"
features = ["pem"]

[dependencies.clap]
version = "3.0.9"
features = ["derive", "clap_derive"]
